frontend/src/SocialListItem.css
.social-item-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
    max-width: 500px;
}

.social-item-info {
    display: flex;
    align-items: center;
}

.icon-container {
    width: 45px;
    height: 45px;
    background-color: rgb(243, 240, 240);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    border-radius: 6px;
}

.icon-image {
    height: 20px;
    width: 20px;
}

.delete-button {
    border-style: none;
    color: red;
}

